<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tvDescRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/desc_register"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <!--    <com.facebook.login.widget.LoginButton-->
    <!--        android:id="@+id/btnLogin"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/shape_retcangle_full_red"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_in_facebook"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvDescRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/shape_retcangle_full_red"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_in_google"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDescSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/roboto"
        android:text="@string/desc_search"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDescSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imgMakan"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/lunch"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/eat" />

    <ImageView
        android:id="@+id/imgJualanRed"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jualanred"
        android:contentDescription="@string/sell" />
    <ImageView
        android:id="@+id/imgTemanRed"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/temanred"
        android:contentDescription="@string/friend" />

</androidx.constraintlayout.widget.ConstraintLayout>